# Knowledge-graph-using-Crew-AI

./: README.md  pyproject.toml
knowledge/: faq_viewer_export.csv  rules_for_ontology.txt
src/agents_for_kg/: crew.py  main.py
src/agents_for_kg/config/: agents.yaml  tasks.yaml
src/agents_for_kg/tools/: custom_tool.py
