[project]
name = "agents_for_kg"
version = "0.1.0"
description = "agents_for_KG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[file-processing,tools]==1.9.0",
    "fastapi>=0.128.0",
    "litellm>=1.75.3",
    "pandas>=2.3.3",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
agents_for_kg = "agents_for_kg.main:run"
run_crew = "agents_for_kg.main:run"
train = "agents_for_kg.main:train"
replay = "agents_for_kg.main:replay"
test = "agents_for_kg.main:test"
run_with_trigger = "agents_for_kg.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
